--- a/javascript/noom/src/views/home.pug
+++ b/javascript/noom/src/views/home.pug
@@ -11,4 +11,7 @@ html(lang="en")
     header
       h1 Noom
     main
-      h2 Welcome !
+      ul
+      form
+        input(type='text', placeholder='write message', required)
+        button send
