--- a/javascript/noom/src/views/home.pug
+++ b/javascript/noom/src/views/home.pug
@@ -12,6 +12,9 @@ html(lang="en")
       h1 Noom
     main
       ul
-      form
+      form#nickname
+        input(type='text', placeholder='choose nickname', required)
+        button save
+      form#message
         input(type='text', placeholder='write message', required)
         button send
