--- a/learn-nextjs14/styles/global.css
+++ b/learn-nextjs14/styles/global.css
@@ -124,8 +124,10 @@ table {
 }
 
 body {
+  padding-top: 150px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: black;
-  font-family: sans-serif;
   color: white;
   font-size: 18px;
 }
